--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* Reset and base styles  */
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto:wght@300&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -15,10 +15,13 @@
 
 /* Links */
 a, a:link, a:visited {
+  /* color: inherit; */
   text-decoration: none;
+  /* display: inline-block; */
 }
 
 a:hover {
+  /* color: inherit; */
   text-decoration: none;
 }
 
@@ -87,13 +90,9 @@ legend {
   display: block;
 }
 
-/* сбросили все стили */
-/* определили переменные */
-/* повторяющиеся стили (шаблон)*/
-/* подключение шрифтов */
 body {
   font-family: "Raleway", sans-serif;
-  background-color: #242b33;
+  background-color: #242B33;
   color: #fff;
   font-size: 16px;
 }
@@ -103,18 +102,14 @@ a {
   transition: color 0.2s ease-in;
 }
 a:hover {
-  color: #d4c17f;
+  color: #D4C17F;
 }
 
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  width: 1140px;
+  max-width: 1140px;
 }
-.container--sm {
-  max-width: 840px;
-}
-
 .container--sm {
   max-width: 840px;
 }
@@ -124,11 +119,11 @@ a:hover {
 }
 
 .visually-hidden {
-  /* contain text within 1px box */
+  /* Contain text within 1px box */
   height: 1px;
   overflow: hidden;
   width: 1px;
-  /* Keep the layout*/
+  /* Keep the layout */
   position: absolute;
   /* Remove any visible trace (e.g. background color) */
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
@@ -146,16 +141,24 @@ a:hover {
 .title-2 {
   font-size: 36px;
   font-family: "Playfair Display", serif;
-  color: #d4c17f;
+  color: #D4C17F;
   font-weight: 700;
+}
+@media screen and (max-width: 959px) {
+  .title-2 {
+    font-size: 28px;
+  }
 }
 
 .link-bold {
-  color: #d4c17f;
+  color: #D4C17F;
   font-weight: 700;
 }
 
-/* используем определенные переменные в базе, блоках страницы*/
+.no-scroll {
+  overflow-y: hidden;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -163,7 +166,13 @@ a:hover {
   padding-top: 30px;
   padding-bottom: 74px;
   min-height: 840px;
-  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url(./../img/header/header-bg.jpg);
+  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url("./../img/header/header-bg.jpg");
+}
+@media screen and (max-width: 959px) {
+  .header {
+    min-height: unset;
+    row-gap: 50px;
+  }
 }
 
 .header__top-row {
@@ -172,14 +181,65 @@ a:hover {
   align-items: center;
 }
 
+.header__top-row--mobile {
+  position: fixed;
+  z-index: 9;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #242B33;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  row-gap: 60px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.header__top-row--mobile .header__nav {
+  display: block;
+}
+.header__top-row--mobile .nav__list {
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
+}
+.header__top-row--mobile .header__nav-btn {
+  position: fixed;
+  top: 50px;
+  right: 15px;
+}
+
+@media screen and (max-width: 959px) {
+  .header__nav {
+    display: none;
+  }
+}
+
+.header__nav-btn {
+  display: none;
+}
+@media screen and (max-width: 959px) {
+  .header__nav-btn {
+    display: block;
+  }
+}
+
 .header__title {
   position: relative;
   padding-bottom: 121px;
   text-align: center;
   font-size: 48px;
   font-family: "Playfair Display", serif;
-  color: #d4c17f;
+  color: #D4C17F;
   font-weight: 700;
+}
+@media screen and (max-width: 959px) {
+  .header__title {
+    font-size: 32px;
+    padding-bottom: 100px;
+  }
 }
 
 .header__title-icon {
@@ -194,6 +254,14 @@ a:hover {
   grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
+@media screen and (max-width: 959px) {
+  .header__footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+  }
+}
 
 .nav {
   font-size: 14px;
@@ -206,10 +274,69 @@ a:hover {
        column-gap: 40px;
 }
 
+/* Nav Icon */
+.nav-icon-btn {
+  --time: 0.1s;
+  --width: 40px;
+  --height: 30px;
+  --line-height: 1px;
+  --line-margin: 2;
+  --color: #fff;
+  height: var(--height);
+  width: var(--width);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-icon {
+  position: relative;
+  width: var(--width);
+  height: var(--line-height);
+  background-color: var(--color);
+}
+
+.nav-icon::before,
+.nav-icon::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  width: var(--width);
+  height: var(--line-height);
+  background-color: var(--color);
+  transition: transform var(--time) ease-in, top var(--time) linear var(--time);
+}
+
+.nav-icon::before {
+  top: calc(var(--line-height) * -8);
+}
+
+.nav-icon::after {
+  top: calc(var(--line-height) * 8);
+}
+
+.nav-icon.nav-icon--active {
+  background-color: transparent;
+}
+
+.nav-icon.nav-icon--active::before,
+.nav-icon.nav-icon--active::after {
+  top: 0;
+  transition: top var(--time) linear, transform var(--time) ease-in var(--time);
+}
+
+.nav-icon.nav-icon--active::before {
+  transform: rotate(45deg);
+}
+
+.nav-icon.nav-icon--active::after {
+  transform: rotate(-45deg);
+}
+
 .info {
   position: relative;
   font-size: 18px;
-  padding-left: 35px;
 }
 .info--map, .info--tel {
   padding-left: 35px;
@@ -218,10 +345,12 @@ a:hover {
   content: "";
   position: absolute;
   left: 0px;
-  top: 0px;
+  top: 50%;
   width: 21px;
   height: 21px;
+  transform: translate(0%, -50%);
   background-repeat: no-repeat;
+  background-position: center;
 }
 .info--map::before {
   background-image: url("./../img/header/map.svg");
@@ -229,9 +358,19 @@ a:hover {
 .info--tel::before {
   background-image: url("./../img/header/phone.svg");
 }
+@media screen and (max-width: 959px) {
+  .info {
+    font-size: 14px;
+  }
+  .info--map, .info--tel {
+    padding-left: 26px;
+  }
+}
 
 .benefits {
+  overflow: hidden;
   position: relative;
+  padding: 120px 0;
 }
 .benefits::after {
   content: "II";
@@ -241,7 +380,7 @@ a:hover {
   top: 0;
   z-index: -1;
   opacity: 0.02;
-  line-height: 1.1;
+  line-height: 1.15;
   font-size: 400px;
   font-family: "Playfair Display", serif;
 }
@@ -251,27 +390,45 @@ a:hover {
   -moz-column-gap: 70px;
        column-gap: 70px;
 }
+@media screen and (max-width: 959px) {
+  .benefits__row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    gap: 40px 30px;
+  }
+}
 
 .benefits__item {
   text-align: center;
-  padding: 120px 0;
 }
 
 .benefits__item-img {
   margin-bottom: 53px;
 }
+@media screen and (max-width: 959px) {
+  .benefits__item-img {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 20px;
+  }
+}
 
 .benefits__item-text {
   font-size: 20px;
-  line-height: 1.35; /* 27(высота):20(размер)=1.35 (множетель) */
+  line-height: 1.35;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+}
+@media screen and (max-width: 959px) {
+  .benefits__item-text {
+    font-size: 16px;
+  }
 }
 
 .apartments {
   position: relative;
 }
-.apartments::after {
+.apartments::before {
   content: "III";
   right: calc(50% + 555px);
   transform: translate(50%, 0%);
@@ -279,7 +436,7 @@ a:hover {
   top: 0;
   z-index: -1;
   opacity: 0.02;
-  line-height: 1.1;
+  line-height: 1.15;
   font-size: 400px;
   font-family: "Playfair Display", serif;
 }
@@ -287,17 +444,28 @@ a:hover {
 .apartments__title {
   margin-bottom: 88px;
 }
+@media screen and (max-width: 959px) {
+  .apartments__title {
+    margin-bottom: 44px;
+  }
+}
 
 .apartments__cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
 }
+@media screen and (max-width: 959px) {
+  .apartments__cards {
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  }
+}
 
 .card {
   overflow: hidden;
   position: relative;
   display: inline-block;
+  color: #fff;
 }
 .card::before {
   content: "";
@@ -307,7 +475,7 @@ a:hover {
   top: 0px;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%);
+  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242B33 100%);
 }
 .card::after {
   opacity: 0;
@@ -347,10 +515,22 @@ a:hover {
   bottom: 44px;
   font-size: 24px;
 }
+@media screen and (max-width: 959px) {
+  .card__title {
+    font-size: 20px;
+    left: 30px;
+    bottom: 30px;
+  }
+}
 
 .cta {
   padding: 180px 0;
-  background: linear-gradient(180deg, #242b33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242b33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9), rgba(36, 43, 51, 0.8)), url("./../../img/cta/cta-bg.jpg"), #c4c4c4;
+  background: linear-gradient(180deg, #242B33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242B33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9), rgba(36, 43, 51, 0.9)), url("./../img/cta/cta-bg.jpg"), #c4c4c4;
+}
+@media screen and (max-width: 959px) {
+  .cta {
+    padding: 60px 0;
+  }
 }
 
 .cta__title {
@@ -362,6 +542,11 @@ a:hover {
   grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
+@media screen and (max-width: 959px) {
+  .cta__wrapper {
+    grid-template-columns: 1fr;
+  }
+}
 
 .cta__text {
   line-height: 1.5;
@@ -369,14 +554,23 @@ a:hover {
 .cta__text p + p {
   margin-top: 1em;
 }
+@media screen and (max-width: 959px) {
+  .cta__text {
+    font-size: 14px;
+  }
+}
 
 .cta__form {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 35px 30px;
 }
+@media screen and (max-width: 959px) {
+  .cta__form {
+    grid-template-columns: 1fr;
+  }
+}
 
-/* .form {} */
 .form__input {
   height: 50px;
   padding: 12px;
@@ -398,28 +592,34 @@ a:hover {
 
 .form__privacy {
   font-size: 13px;
-  color: #E7e7E7;
+  color: #E7E7E7;
   text-align: center;
   line-height: 1.23;
+}
+@media screen and (max-width: 959px) {
+  .form__privacy--bottom {
+    grid-row: 4/5;
+  }
 }
 
 .form__btn {
   height: 50px;
-  padding: 16px;
+  padding: 12px;
   font-size: 16px;
   color: #fff;
   font-weight: 700;
   text-align: center;
-  background-color: #d4c17f;
+  background-color: #D4C17F;
   transition: background-color 0.2s ease-in;
 }
 .form__btn:hover {
-  background-color: #e5ca6e;
+  background-color: #ddc676;
 }
 
 .video {
-  text-align: center;
+  overflow: hidden;
   position: relative;
+  text-align: center;
 }
 .video::after {
   content: "IV";
@@ -429,7 +629,7 @@ a:hover {
   top: 0;
   z-index: -1;
   opacity: 0.02;
-  line-height: 1.1;
+  line-height: 1.15;
   font-size: 400px;
   font-family: "Playfair Display", serif;
 }
@@ -460,52 +660,118 @@ a:hover {
   transform: translate(-50%, -50%);
   transition: all 0.2s ease-in;
 }
+@media screen and (max-width: 959px) {
+  .video__icon {
+    width: 80px;
+    height: 80px;
+  }
+}
 
 .video__link:hover .video__icon {
   transform: translate(-50%, -50%) scale(1.2);
   filter: saturate(1.5);
 }
 
-/* .video__img {
-
-} */
 .section-map {
   position: relative;
   padding: 180px 0;
 }
-.section-map::after {
+.section-map::before {
   content: "V";
+  position: absolute;
   right: calc(50% + 555px);
   transform: translate(50%, 0%);
   position: absolute;
   top: 0;
   z-index: -1;
   opacity: 0.02;
-  line-height: 1.1;
+  line-height: 1.15;
   font-size: 400px;
   font-family: "Playfair Display", serif;
   top: 180px;
   line-height: 1;
 }
+@media screen and (max-width: 959px) {
+  .section-map {
+    padding: 90px 0;
+  }
+}
 
 .section-map__title {
   margin-bottom: 88px;
 }
+@media screen and (max-width: 959px) {
+  .section-map__title {
+    margin-bottom: 44px;
+  }
+}
 
-/* .section-map__map {
-
-} */
 .map {
+  width: 100%;
   height: 358px;
   background: #626262;
+}
+
+[class*=copyrights-pane] {
+  /* display: none !important; */
+  opacity: 0;
+  transition: opacity 0.2s ease-in;
+}
+
+.map:hover [class*=copyrights-pane] {
+  opacity: 1;
+}
+
+/* Создать свою карту */
+[class*=gototech] {
+  display: none !important;
+}
+
+[class*=ground-pane] {
+  filter: grayscale(1) sepia(10%);
+}
+
+/* Baloon */
+[class*=balloon__layout], [class*=balloon__content] {
+  background-color: #242b33 !important;
+  color: #fff !important;
+}
+
+[class*=balloon__tail]::after {
+  background-color: #242b33 !important;
+}
+
+[class*=balloon_layout_panel] {
+  background-color: #242b33 !important;
+}
+
+[class*=balloon__layout], [class*=balloon__content] a {
+  color: #D4C17F !important;
+}
+
+[class*=balloon__close-button] {
+  background: url("./../img/map/cross.svg") 50% no-repeat !important;
+  width: 15px !important;
+  height: 15px !important;
+  margin: 10px 7px;
 }
 
 .feedback {
   padding-bottom: 180px;
 }
+@media screen and (max-width: 959px) {
+  .feedback {
+    padding-bottom: 90px;
+  }
+}
 
 .feedback__title {
   margin-bottom: 38px;
+}
+@media screen and (max-width: 959px) {
+  .feedback__title {
+    margin-bottom: 19px;
+  }
 }
 
 .feedback__form {
@@ -514,13 +780,24 @@ a:hover {
   gap: 30px;
   align-items: center;
 }
+@media screen and (max-width: 959px) {
+  .feedback__form {
+    grid-template-columns: 1fr;
+  }
+}
 
 .footer {
   padding-top: 72px;
   padding-bottom: 51px;
-  background-color: #2d343c;
+  background-color: #2D343C;
   font-size: 14px;
   letter-spacing: 0.05rem;
+}
+@media screen and (max-width: 959px) {
+  .footer {
+    padding-top: 36px;
+    padding-bottom: 25px;
+  }
 }
 
 .footer__grid {
@@ -528,14 +805,17 @@ a:hover {
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
 }
+@media screen and (max-width: 959px) {
+  .footer__grid {
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    gap: 40px 30px;
+  }
+}
 
 .footer__logo {
   margin-top: -12px;
 }
 
-/* .footer__nav {
-
-} */
 .footer__nav-list {
   display: grid;
   gap: 15px;
