--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,10 +1,7 @@
-/* подключение шрифтов */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto:wght@300&display=swap');
 
 body {
-    font-family: $font-main; 
+    font-family: $font-main;
     background-color: $dark;
     color: $white;
     font-size: 16px;
@@ -22,15 +19,11 @@ a {
 .container {
     margin: 0 auto;
     padding: 0 15px;
-    width: 1140px;
+    max-width: 1140px;
 
     &--sm {
         max-width: 840px;
     }
-}
-
-.container--sm {
-    max-width: 840px; 
 }
 
 .text-right {
@@ -38,21 +31,21 @@ a {
 }
 
 .visually-hidden {
-    /* contain text within 1px box */
-    height: 1px;
-    overflow: hidden;
-    width: 1px;
+    /* Contain text within 1px box */
+	height: 1px;
+	overflow: hidden;
+	width: 1px;
 
-    /* Keep the layout*/
-    position: absolute;
+	/* Keep the layout */
+	position: absolute;
 
-    /* Remove any visible trace (e.g. background color) */
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-    clip: rect(1px, 1px, 1px, 1px);
-    clip-path: inset(50%);  /* browsers in the future */
+	/* Remove any visible trace (e.g. background color) */
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(50%); /* browsers in the future */
 
-    /* Prevent the screen reader to skip spaces between words */
-    white-space: nowrap;
+	/* Prevent the screen reader to skip spaces between words */
+	white-space: nowrap;
 }
 
 .none {
@@ -64,6 +57,10 @@ a {
     font-family: $font-accent;
     color: $accent;
     font-weight: 700;
+
+    @include mediaTablet {
+        font-size: 28px;
+    }
 }
 
 .link-bold {
@@ -71,6 +68,6 @@ a {
     font-weight: 700;
 }
 
-
-
-
+.no-scroll {
+    overflow-y: hidden;
+}
