--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -1,10 +1,16 @@
-@mixin romanNumerals {
+@mixin decorNumber {
     position: absolute;
     top: 0;
     z-index: -1;
 
-    opacity: 0.02;  //видимость 20%
-    line-height: 1.1;
+    opacity: 0.02;
+    line-height: 1.15;
     font-size: 400px;
     font-family: $font-accent;
+}
+
+@mixin mediaTablet {
+    @media screen and (max-width: $tablet) {
+        @content;
+    }
 }
