--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -14,10 +14,13 @@
 /* Links */
 
 a, a:link, a:visited  {
+    /* color: inherit; */
     text-decoration: none;
+    /* display: inline-block; */
 }
 
 a:hover  {
+    /* color: inherit; */
     text-decoration: none;
 }
 
