--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,12 +1,15 @@
 // Fonts
-$font-main: "Raleway", sans-serif;
-$font-accent: "Playfair Display", serif;
-$font-secondary: "Roboto", sans-serif;
+$font-main: 'Raleway', sans-serif;
+$font-accent: 'Playfair Display', serif;
+$font-secondary: 'Roboto', sans-serif;
 
 // Colors
-$dark: #242b33;
-$accent: #d4c17f; 
+$dark: #242B33;
+$accent: #D4C17F;
 $white: #fff;
-$footer-bg: #2d343c;
+$footer-bg: #2D343C;
 $placeholder: #BEBEBE;
-$muted: #E7e7E7;
+$muted: #E7E7E7;
+
+// Media
+$tablet: 959px;
