--- a/scss/blocks/_apartments.scss
+++ b/scss/blocks/_apartments.scss
@@ -1,22 +1,29 @@
 .apartments {
     position: relative;
 
-    &::after {
+    &::before {
         content: "III";
         right: calc(50% + 555px);
         transform: translate(50%, 0%);
-        @include romanNumerals;
+        @include decorNumber;
     }
 }
 
+
 .apartments__title {
     margin-bottom: 88px;
+
+    @include mediaTablet {
+        margin-bottom: 44px;
+    }
 }
-
-
 
 .apartments__cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
+
+    @include mediaTablet {
+        grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    }
 }
