--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -1,38 +1,43 @@
 .card {
     overflow: hidden;
-    position: relative;
-    display: inline-block;
+	position: relative;
+	display: inline-block;
+    color: $white;
 
-    &::before {
-        content: "";
+	&::before {
+		content: '';
 
-        position: absolute;
+		position: absolute;
         z-index: 6;
-        left: 0px;
-        top: 0px;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(180deg,
-                rgba(36, 43, 51, 0) 0%,
-                $dark 100%),
-    }
+		left: 0px;
+		top: 0px;
+		width: 100%;
+		height: 100%;
+
+		background: linear-gradient(
+				180deg,
+				rgba(36, 43, 51, 0) 0%,
+				$dark 100%
+			);
+	}
 
     &::after {
         opacity: 0;
+
         content: "";
+
         position: absolute;
         z-index: 7;
         left: 15px;
         top: 15px;
         right: 15px;
         bottom: 15px;
-        border: 3px double rgba(255,255,255,0.4);
-
+        border: 3px double rgba(255,255,255, 0.4);
 
         transition: opacity 0.2s ease-in;
     }
 
-    &:hover{
+    &:hover {
         color: $white;
     }
 
@@ -51,7 +56,6 @@
 .card:hover .card__img {
     transform: scale(1.1);
     filter: contrast(110%) brightness(1.2) saturate(1.2);
-    
 }
 
 .card__title {
@@ -61,4 +65,10 @@
     right: 20px;
     bottom: 44px;
     font-size: 24px;
+
+    @include mediaTablet {
+        font-size: 20px;
+        left: 30px;
+        bottom: 30px;
+    }
 }
