--- a/scss/blocks/_cta.scss
+++ b/scss/blocks/_cta.scss
@@ -1,29 +1,43 @@
 .cta {
-    padding: 180px 0;
-    background: linear-gradient(180deg,
-            $dark 10.42%,
-            rgba(36, 43, 51, 0) 50.52%,
-            $dark 90.1%),
-        linear-gradient(0deg, rgba(36, 43, 51, 0.9), rgba(36, 43, 51, 0.8)),
-        url('./../../img/cta/cta-bg.jpg'), #c4c4c4;
+	padding: 180px 0;
 
+	background: linear-gradient(
+			180deg,
+			$dark 10.42%,
+			rgba(36, 43, 51, 0) 50.52%,
+			$dark 90.1%
+		),
+		linear-gradient(0deg, rgba(36, 43, 51, 0.9), rgba(36, 43, 51, 0.9)),
+		url('./../img/cta/cta-bg.jpg'), #c4c4c4;
+
+        @include mediaTablet {
+	        padding: 60px 0;
+        }
 }
 
 .cta__title {
-    margin-bottom: 17px;
+	margin-bottom: 17px;
 }
 
 .cta__wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
+
+    @include mediaTablet {
+        grid-template-columns: 1fr;
+    }
 }
 
 .cta__text {
     line-height: 1.5;
 
     p + p {
-        margin-top: 1em; // отствуп между абзацами равен размеру шрафта
+        margin-top: 1em;
+    }
+
+    @include mediaTablet {
+        font-size: 14px;
     }
 }
 
@@ -31,4 +45,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 35px 30px;
+
+    @include mediaTablet {
+        grid-template-columns: 1fr;
+    }
 }
