--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -1,4 +1,5 @@
-/* .form {} */
+.form {
+}
 
 .form__input {
     height: 50px;
@@ -8,15 +9,14 @@
     color: $white;
     font-size: 14px;
     transition: background-color 0.2s ease-in;
-    
+
     &::placeholder {
         color: $placeholder;
     }
-    
+
     &:focus {
         background-color: rgba(255, 255, 255, 0.25);
     }
-    
 }
 
 .form__privacy {
@@ -24,19 +24,25 @@
     color: $muted;
     text-align: center;
     line-height: 1.23;
+
+    &--bottom {
+        @include mediaTablet {
+            grid-row: 4 / 5;
+        }
+    }
 }
 
 .form__btn {
     height: 50px;
-    padding: 16px;
+    padding: 12px;
     font-size: 16px;
     color: $white;
     font-weight: 700;
     text-align: center;
     background-color: $accent;
     transition: background-color 0.2s ease-in;
-    
+
     &:hover {
-        background-color: saturate($accent, 20%);
+        background-color: saturate($accent, 10%);
     }
 }
