--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,21 @@
 // Base
-
-@import 'base/reset';   /* сбросили все стили */
-@import 'base/vars';    /* определили переменные */
-@import 'base/mixins';  /* повторяющиеся стили (шаблон)*/
-@import 'base/base';    /* используем определенные переменные в базе, блоках страницы*/
+@import './base/reset';
+@import './base/vars';
+@import './base/mixins';
+@import './base/base';
 
 // Blocks
-@import 'blocks/header'; 
-@import 'blocks/nav';
-@import 'blocks/info';
-@import 'blocks/benefits';
-@import 'blocks/apartments';
-@import 'blocks/card';
-@import 'blocks/cta';
-@import 'blocks/form';
-@import 'blocks/video';
-@import 'blocks/section-map';
-@import 'blocks/feedback';
-@import 'blocks/footer';
+@import './blocks/header';
+@import './blocks/nav';
+@import './blocks/nav-icon';
+@import './blocks/info';
+@import './blocks/benefits';
+@import './blocks/apartments';
+@import './blocks/card';
+@import './blocks/cta';
+@import './blocks/form';
+@import './blocks/video';
+@import './blocks/section-map';
+@import './blocks/yandex-map';
+@import './blocks/feedback';
+@import './blocks/footer';
